Code cleanup, move static strings to properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=bankScraper
+mbank.accounts.url=https://online.mbank.pl/pl/Accounts/Accounts/AccountsGroups
+mbank.login.url=https://online.mbank.pl/pl/LoginMain/Account/JsonLogin
+mbank.fetch.csrf.url=https://online.mbank.pl/pl/setup/data
+mbank.fetch.scaId.url=https://online.mbank.pl/pl/Sca/GetScaAuthorizationData
+mbank.begin.twoFactorAuth.url=https://online.mbank.pl/api/auth/initprepare
+mbank.status.twoFactorAuth.url=https://online.mbank.pl/api/auth/status
+mbank.execute.twoFactorAuth.url=https://online.mbank.pl/api/auth/execute
+mbank.sca.finalize.url=https://online.mbank.pl/pl/Sca/FinalizeAuthorization
+mbank.init.url=https://online.mbank.pl/api/chat/init
