Create HttpService class to avoid code repetition.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ mbank.status.twoFactorAuth.url=https://online.mbank.pl/api/auth/status
 mbank.execute.twoFactorAuth.url=https://online.mbank.pl/api/auth/execute
 mbank.sca.finalize.url=https://online.mbank.pl/pl/Sca/FinalizeAuthorization
 mbank.init.url=https://online.mbank.pl/api/chat/init
+userAgent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36
