Modify application properties, add test properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=bankScraper
-mbank.accounts.url=https://online.mbank.pl/pl/Accounts/Accounts/AccountsGroups
-mbank.login.url=https://online.mbank.pl/pl/LoginMain/Account/JsonLogin
-mbank.fetch.csrf.url=https://online.mbank.pl/pl/setup/data
-mbank.fetch.scaId.url=https://online.mbank.pl/pl/Sca/GetScaAuthorizationData
-mbank.begin.twoFactorAuth.url=https://online.mbank.pl/api/auth/initprepare
-mbank.status.twoFactorAuth.url=https://online.mbank.pl/api/auth/status
-mbank.execute.twoFactorAuth.url=https://online.mbank.pl/api/auth/execute
-mbank.sca.finalize.url=https://online.mbank.pl/pl/Sca/FinalizeAuthorization
-mbank.init.url=https://online.mbank.pl/api/chat/init
+mbank.base.url=https://online.mbank.pl
+mbank.accounts.url=/pl/Accounts/Accounts/AccountsGroups
+mbank.login.url=/pl/LoginMain/Account/JsonLogin
+mbank.fetch.csrf.url=/pl/setup/data
+mbank.fetch.scaId.url=/pl/Sca/GetScaAuthorizationData
+mbank.begin.twoFactorAuth.url=/api/auth/initprepare
+mbank.status.twoFactorAuth.url=/api/auth/status
+mbank.execute.twoFactorAuth.url=/api/auth/execute
+mbank.finalize.twoFactorAuth.url=/pl/Sca/FinalizeAuthorization
 userAgent=Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.0.0.0 Safari/537.36
