Hide spring banner when running tests

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,3 +8,4 @@ mbank.status.twoFactorAuth.url=/status-two-factor-auth
 mbank.execute.twoFactorAuth.url=/execute-two-factor-auth
 mbank.finalize.twoFactorAuth.url=/finalize-two-factor-auth
 mbank.accounts.url=/accounts
+spring.main.banner-mode=off
